# oxide

./: .gitignore  .gitmodules  MANIFEST.in  README.md  api_server.sh  helloworld.out  install.sh  llm_service.py  mcp_server.py  mcp_server_basic.py  ollama_service.py  oxide.bat  oxide.sh  oxide_mcp_server.py  pyproject.toml  rshell.py  shell.py  test.py  test.txt  web_app.sh
api_server/: README.md  config.ini  main.py
api_server/routes/: collections.py  modules.py  oxide.py  retrieve.py
core/: api.py  client.py  config.py  datastore_filesystem.py  local_datastore.py  multiproc.py  ologger.py  options.py  oshell.py  otypes.py  oxide.py  oxide_server.py  progress.py  rshell.py  server.py  sys_utils.py  tags.py
core/libraries/: angr_utils.py  disasm_utils.py  ghidra_utils.py  histogram.py  re_lib.py
disassembly/elf_collatz_stripped/: elf_collatz_stripped.block_min.truth  elf_collatz_stripped.c  elf_collatz_stripped.disasm_max.truth  elf_collatz_stripped.disasm_min.truth  elf_collatz_stripped.functions.truth  elf_collatz_stripped.out  elf_collatz_stripped.s
disassembly/elf_exotic/: elf_exotic.block_min.truth  elf_exotic.disasm_max.truth  elf_exotic.disasm_min.truth  elf_exotic.functions.truth  elf_exotic.out
disassembly/elf_exotic_32/: elf_exotic_32.block_min.truth  elf_exotic_32.disasm_max.truth  elf_exotic_32.disasm_min.truth  elf_exotic_32.functions.truth  elf_exotic_32.out  exotic_instructions-i386.s
disassembly/elf_inheritance/: elf_inheritance.cpp  elf_inheritance.disasm_max.truth  elf_inheritance.disasm_min.truth  elf_inheritance.functions.truth  elf_inheritance.out  elf_inheritance.s
disassembly/elf_inheritance2/: elf_inheritance2.cpp  elf_inheritance2.disasm_max.truth  elf_inheritance2.disasm_min.truth  elf_inheritance2.functions.truth  elf_inheritance2.out  elf_inheritance2.s
disassembly/elf_jump_target/: elf_jump_target.block_min.truth  elf_jump_target.c  elf_jump_target.disasm_max.truth  elf_jump_target.disasm_min.truth  elf_jump_target.functions.truth  elf_jump_target.s
disassembly/elf_jump_target_wreturn/: elf_jump_target_wreturn.block_min.truth  elf_jump_target_wreturn.c  elf_jump_target_wreturn.disasm_max.truth  elf_jump_target_wreturn.disasm_min.truth  elf_jump_target_wreturn.functions.truth  elf_jump_target_wreturn.out  elf_jump_target_wreturn.s
disassembly/elf_nonreturn/: elf_nonreturn.block_min.truth  elf_nonreturn.c  elf_nonreturn.disasm_max.truth  elf_nonreturn.disasm_min.truth  elf_nonreturn.functions.truth  elf_nonreturn.out  elf_nonreturn.s
disassembly/elf_samplecase_stmt/: elf_samplecase_stmt.block_min.truth  elf_samplecase_stmt.c  elf_samplecase_stmt.disasm_max.truth  elf_samplecase_stmt.disasm_min.truth  elf_samplecase_stmt.functions.truth  elf_samplecase_stmt.out  elf_samplecase_stmt.s
disassembly/elf_samplecase_stmt2/: elf_samplecase_stmt2.block_min.truth  elf_samplecase_stmt2.c  elf_samplecase_stmt2.disasm_max.truth  elf_samplecase_stmt2.disasm_min.truth  elf_samplecase_stmt2.functions.truth  elf_samplecase_stmt2.out  elf_samplecase_stmt2.s
docs/: DRIFT_Tutorial.md  OxidePEfile_tutorial.txt  README.txt  cheatsheet.tex  dev_guide.tex  plugin_tutorial.md  plugin_tutorial.txt  shell_tutorial.md  shell_tutorial.txt
plugins/: basic_llm_binary_predictor.py  call_graph_print.py  capa_print.py  compare.py  compare_capa_results.py  coverage.py  default.py  function_description_occurances.py  gpt_transcribe.py  header_tools.py  llm.py  re_tools.py  src_mapping.py  truth.py  truth_compare.py
scripts/: ExportBinDiffScript.java  ExportXMLScript.java  angr_constraint_grabber.py  angr_optimization_test.py  angr_param_optimization.py  decompile_mapping.java  decompile_mapping.py  ghidra_extract.java  ghidra_json_extract.java  ghidra_pcode_extract.java  ida_info_out.py  string_reference.java  test_script.java
src/oxide/: __init__.py  rshell.py  server.py  shell.py
src/oxide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scripts/: ida_info_out.py  ida_info_out_7x.py
src/test/: _path_magic.py  sys_utils_test.py
test/: _path_magic.py  core_test.py  module_test.py  shell_test.py  sys_utils_test.py  test.py
utils/: server.py
web_app/: README.md  package-lock.json  package.json
web_app/client/: app.vue  (+3 more)
(+616 files in other folders)
