[project]
name = "oxide"
version = "4.0.0"
description = "Oxide is a flexible, modular, distributed framework for performing analysis of data files, including executables."
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "pandas>=2.3.3",
    "colorama",
    "termcolor",
    "r2pipe",
    "flare-capa",
    "pyghidra>=3.0.2",
    "networkx>=3.1",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
    "matplotlib>=3.9.4",
    "capstone>=5.0.0.post1",
    "pyyaml>=6.0.3",
    "py-tlsh>=4.12.1",
    "pyahocorasick>=2.2.0",
    "opencv-python>=4.13.0.92",
    "python-bindiff>=0.3.4",
    "angr>=9.2.102",
    "cle>=9.2.102",
    "ollama>=0.6.1",
    "stopit>=1.1.2",

   
    "statsmodels>=0.14.6",
    "seaborn>=0.13.2",
    "unblob>=26.3.30",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
    "pytest>=8.4.2",
    "ruff>=0.15.8"
]

ml = [
    "sentence-transformers>=5.1.2",
     "scikit-learn>=1.6.1",
]
[project.scripts]
oxide = "oxide.shell:main"
oxide-remote = "oxide.rshell:main"
oxide-server = "oxide.server:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project.urls]
"HomePage" = "https://github.com/Program-Understanding/oxide"
"Bug Reports" = "https://github.com/Program-Understanding/oxide/issues"
"Source" = "https://github.com/Program-Understanding/oxide"

[tool.ruff.lint]
ignore = ["E402", "I001"]

[tool.ruff.format]
exclude = ["*"]
